# pdf_qa

./: .gitignore  README.md  pdf_qa_app.py  pyproject.toml  requirements.txt
